@@ -1,3 +1,8 @@
+2008-10-16 Frank Naegler  <typo3@naegler.net>
+
+	* added check if resource is added before add it twice in tx_community_AccessManager->addResource()
+	* added implements tx_community_acl_AclResource to tx_community_controller_AbstractCommunityApplication and its needed methods 
+
 2008-10-08 Ingo Renner  <ingo@typo3.org>
 
 	* changed the widget view helper to require the real names of application and widget
